--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+	<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+<title>Models</title>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+	<h1>Astronaut</h1>
+	<!-- Use it like any other HTML element -->
+	<model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer>
+	<h1>Cylinder</h1>
+	<model-viewer src="https://caraya.github.io/model-viewer-demo/models/2CylinderEngine.gltf" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<h1>Mytest</h1>
+	<model-viewer src="https://www.lamborghini.com/sites/it-en/files/DAM/lambirgini/facelift_2019/model_detail/augmented-reality/huracan/huracan_evo_rwd_spyder/Huracan-EVO-RWD-Spyder-opt-22.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+
 </body>
 </html>
