--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<h1>Cylinder</h1>
 	<model-viewer src="https://caraya.github.io/model-viewer-demo/models/2CylinderEngine.gltf" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>Mytest</h1>
-	<model-viewer src="https://www.lamborghini.com/sites/it-en/files/DAM/lambirgini/facelift_2019/model_detail/augmented-reality/huracan/huracan_evo_rwd_spyder/Huracan-EVO-RWD-Spyder-opt-22.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer src="Astronaut.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 
 </body>
 </html>
