--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 
 	<h1>Astronaut</h1>
 	<!-- Use it like any other HTML element -->
-	<model-viewer src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" alt="A 3D model of an astronaut" auto-rotate camera-controls></model-viewer>
 	<h1>Cylinder</h1>
-	<model-viewer src="https://caraya.github.io/model-viewer-demo/models/2CylinderEngine.gltf" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="https://caraya.github.io/model-viewer-demo/models/2CylinderEngine.gltf" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>Pantograf</h1>
-	<model-viewer src="Elektro_Pantograf.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="Elektro_Pantograf.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>Motor Explode</h1>
-	<model-viewer src="eMotor_Explode_Android.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="eMotor_Explode_Android.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>eMotor Inside</h1>
-	<model-viewer src="eMotor_Inside.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="eMotor_Inside.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>Forklift</h1>
-	<model-viewer src="Forklift.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="Forklift.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 	<h1>Industrial Lift</h1>
-	<model-viewer src="Industrial_Lift.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
+	<model-viewer style="width: 500px; height: 500px;" src="Industrial_Lift.glb" alt="A 3D model of a 2 cylinder engine" auto-rotate="" camera-controls=""></model-viewer>
 
 </body>
 </html>
