--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" alt="Pantograf" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/Elektro_Pantograf.usdz" rel="ar"><img src="Thumbnails/20200528_101932711_iOS.png" srcset="Thumbnails/20200528_101932711_iOS.png" alt="Pantograf"></a>
+			<a href="Models_iOS/Elektro_Pantograf.usdz" rel="ar"><img src="Thumbnails/Elektro_Pantograf.png" srcset="Thumbnails/Elektro_Pantograf.png" alt="Pantograf"></a>
 		</div>
 	</div>
 
@@ -47,10 +47,10 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotor_Explode_Android.glb" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="Models_Android/eMotor_Explode.glb" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/eMotor_Explode_Android.usdz" rel="ar"><img src="Thumbnails/20200528_102203345_iOS.png" srcset="Thumbnails/20200528_102203345_iOS.png" alt="Motor Explode"></a>
+			<a href="Models_iOS/eMotor_Explode.usdz" rel="ar"><img src="Thumbnails/eMotor_Explode.png" srcset="Thumbnails/eMotor_Explode.png" alt="Motor Explode"></a>
 		</div>
 	</div>
 
@@ -62,7 +62,7 @@
 			<model-viewer class="model" src="Models_Android/eMotor_Inside.glb" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/eMotor_Inside.usdz" rel="ar"><img src="Thumbnails/20200528_102306777_iOS.png" srcset="Thumbnails/20200528_102306777_iOS.png" alt="Motor Inside"></a>
+			<a href="Models_iOS/eMotor_Inside.usdz" rel="ar"><img src="Thumbnails/eMotor_Inside.png" srcset="Thumbnails/eMotor_Inside.png" alt="Motor Inside"></a>
 		</div>
 	</div>
 
@@ -74,7 +74,7 @@
 			<model-viewer class="model" src="Models_Android/Forklift.glb" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/Forklift.usdz" rel="ar"><img src="Thumbnails/20200528_102433918_iOS.png" srcset="Thumbnails/20200528_102433918_iOS.png" alt="Forklift"></a>
+			<a href="Models_iOS/Forklift.usdz" rel="ar"><img src="Thumbnails/Forklift.png" srcset="Thumbnails/Forklift.png" alt="Forklift"></a>
 		</div>
 	</div>
 
@@ -86,7 +86,7 @@
 			<model-viewer class="model" src="Models_Android/Industrial_Lift.glb" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/Industrial_Lift.usdz" rel="ar"><img src="Thumbnails/20200528_102526175_iOS.png" srcset="Thumbnails/20200528_102526175_iOS.png" alt="Industrial Lift"></a>
+			<a href="Models_iOS/Industrial_Lift.usdz" rel="ar"><img src="Thumbnails/Industrial_Lift.png" srcset="Thumbnails/Industrial_Lift.png" alt="Industrial Lift"></a>
 		</div>
 	</div>
 </body>
