--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotorIn_A.glb" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="Models_Android/eMotor_Inside.glb" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
-			<a href="Models_iOS/eMotorIn_A.usdz" rel="ar"><img src="Thumbnails/eMotor_Inside.jpg" srcset="Thumbnails/eMotor_Inside.jpg" alt="Motor Inside"></a>
+			<a href="Models_iOS/eMotor_Inside.usdz" rel="ar"><img src="Thumbnails/eMotor_Inside.jpg" srcset="Thumbnails/eMotor_Inside.jpg" alt="Motor Inside"></a>
 		</div>
 	</div>
 
