--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" alt="Pantograf" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" alt="Pantograf" ios-src="Models_iOS/Elektro_Pantograf.usdz" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 		<div class="column">
 			<a href="Models_iOS/Elektro_Pantograf.usdz" rel="ar"><img src="Thumbnails/Elektro_Pantograf.jpg" srcset="Thumbnails/Elektro_Pantograf.jpg" alt="Pantograf"></a>
