--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" alt="Pantograf" ios-src="Models_iOS/Elektro_Pantograf.usdz" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-		<div class="column">
-			<a href="Models_iOS/Elektro_Pantograf.usdz" rel="ar"><img src="Thumbnails/Elektro_Pantograf.jpg" srcset="Thumbnails/Elektro_Pantograf.jpg" alt="Pantograf"></a>
+			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" ios-src="Models_iOS/Elektro_Pantograf.usdz" alt="Pantograf" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -47,10 +44,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotor_Explode.glb" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-		<div class="column">
-			<a href="Models_iOS/eMotor_Explode.usdz" rel="ar"><img src="Thumbnails/eMotor_Explode.jpg" srcset="Thumbnails/eMotor_Explode.jpg" alt="Motor Explode"></a>
+			<model-viewer class="model" src="Models_Android/eMotor_Explode.glb" ios-src="Models_iOS/eMotor_Explode.usdz" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -59,10 +53,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotor_Inside.glb" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-		<div class="column">
-			<a href="Models_iOS/eMotor_Inside.usdz" rel="ar"><img src="Thumbnails/eMotor_Inside.jpg" srcset="Thumbnails/eMotor_Inside.jpg" alt="Motor Inside"></a>
+			<model-viewer class="model" src="Models_Android/eMotor_Inside.glb" ios-src="Models_iOS/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -71,10 +62,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Forklift.glb" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-		<div class="column">
-			<a href="Models_iOS/Forklift.usdz" rel="ar"><img src="Thumbnails/Forklift.jpg" srcset="Thumbnails/Forklift.jpg" alt="Forklift"></a>
+			<model-viewer class="model" src="Models_Android/Forklift.glb" ios-src="Models_iOS/Forklift.usdz" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -83,10 +71,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Industrial_Lift.glb" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-		<div class="column">
-			<a href="Models_iOS/Industrial_Lift.usdz" rel="ar"><img src="Thumbnails/Industrial_Lift.jpg" srcset="Thumbnails/Industrial_Lift.jpg" alt="Industrial Lift"></a>
+			<model-viewer class="model" src="Models_Android/Industrial_Lift.glb" ios-src="Models_iOS/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 </body>
