--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="https://unpkg.com/@webcomponents/shadydom/shadydom.min.js"></script>
+	<script src="https://unpkg.com/@webcomponents/custom-elements/src/native-shim"></script>
+	<script src="https://unpkg.com/@webcomponents/custom-elements/custom-elements.min"></script>
 	<script src="https://unpkg.com/@webcomponents/custom-elements"></script>
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 	<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
