--- a/index.html
+++ b/index.html
@@ -90,5 +90,14 @@
 			<model-viewer class="model" src="Models_Android/Industrial_Lift.glb" ios-src="Models_iOS/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
+
+	<div class="row">
+		<h1>Palette</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/Palette3.glb" alt="Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
 </body>
 </html>
