--- a/index.html
+++ b/index.html
@@ -92,11 +92,29 @@
 	</div>
 
 	<div class="row">
-		<h1>Palette</h1>
+		<h1>Palette3</h1>
 	</div>
 	<div class="row">
 		<div class="column">
 			<model-viewer class="model" src="Models_Android/Palette3.glb" alt="Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
+
+	<div class="row">
+		<h1>bezUVWaC</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/bezUVWaC.glb" alt="bezUVWaC" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
+
+	<div class="row">
+		<h1>sUVWaC</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/sUVWaC.glb" alt="sUVWaC" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 </body>
