--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	</div>
 
 	<div class="row">
-		<h1>Bizz_Palette</h1>
+		<h1>Bizz_Palette test</h1>
 	</div>
 	<div class="row">
 		<div class="column">
