--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
 	</div>
 
 	<div class="row">
+		<h1>Bizz_Palette</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/Bizz_Palette.glb" alt="Bizz_Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
+
+	<div class="row">
 		<h1>Palette_025K</h1>
 	</div>
 	<div class="row">
