--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 	</div>
 
 	<div class="row">
-		<h1>BEZanim</h1>
+		<h1>P3_linear</h1>
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/BEZanim.glb" alt="BEZanim" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="Models_Android/P3_linear.glb" alt="P3_linear" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 </body>
