--- a/index.html
+++ b/index.html
@@ -92,20 +92,11 @@
 	</div>
 
 	<div class="row">
-		<h1>P3_linear</h1>
+		<h1>Bizz_Palette</h1>
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/P3_linear.glb" alt="P3_linear" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-	</div>
-
-	<div class="row">
-		<h1>P_2_Textured_025K_cd</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="Models_Android/P_2_Textured_025K_cd.glb" alt="P_2_Textured_025K_cd" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="Models_Android/Bizz_Palette.glb" alt="Bizz_Palette" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 </body>
