--- a/index.html
+++ b/index.html
@@ -99,5 +99,14 @@
 			<model-viewer class="model" src="Models_Android/Bizz_Palette.glb" alt="Bizz_Palette" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
+
+	<div class="row">
+		<h1>Palette_025K_TEST</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/Palette_025K_TEST.glb" alt="Palette_025K_TEST" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
 </body>
 </html>
