--- a/index.html
+++ b/index.html
@@ -99,5 +99,14 @@
 			<model-viewer class="model" src="Models_Android/Bizzcom_Palette.glb" ios-src="Models_iOS/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
+
+	<div class="row">
+		<h1>Bizzcom Palette 2</h1>
+	</div>
+	<div class="row">
+		<div class="column">
+			<model-viewer class="model" src="Models_Android/Bizzcom_Palette_2.glb" ios-src="Models_iOS/Bizzcom_Palette_2.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+		</div>
+	</div>
 </body>
 </html>
