--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	<script src="https://modelviewer.dev/node_modules/focus-visible/dist/focus-visible.js" defer></script>
 
 	<!-- Import the component -->
-	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-	<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 	<style>
 		* {
