--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 	<!-- Import the component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+	<script nomodule src="https://unpkg.com/@google/model-viewer@v1.1.0/dist/model-viewer-legacy.js"></script>
 
 	<style>
 		* {
