--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://modelviewer.dev/node_modules/resize-observer-polyfill/dist/ResizeObserver.js"></script>
 
 	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-	<script src="https://modelviewer.dev/node_modules/focus-visible/dist/focus-visible.js" defer></script>
+	<script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
 	<!-- Import the component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
