--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 	<!-- The following libraries and polyfills are recommended to maximize browser support -->
 
 	<!-- 🚨 REQUIRED: Web Components polyfill to support Edge and Firefox < 63 -->
-	<!--script src="https://modelviewer.dev/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script-->
+	<script src="https://modelviewer.dev/node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
 	<!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
-	<!--script src="https://modelviewer.dev/node_modules/intersection-observer/intersection-observer.js"></script-->
+	<script src="https://modelviewer.dev/node_modules/intersection-observer/intersection-observer.js"></script>
 
 	<!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
-	<!--script src="https://modelviewer.dev/node_modules/resize-observer-polyfill/dist/ResizeObserver.js"></script-->
+	<script src="https://modelviewer.dev/node_modules/resize-observer-polyfill/dist/ResizeObserver.js"></script>
 
 	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-	<!--script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script-->
+	<script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
 	<!-- Import the component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer@v1.1.0/dist/model-viewer.min.js"></script>
