--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
 		</div>
 	</div>
 
-	<div class="row">
+	<!--div class="row">
 		<h1>Bizzcom Palette</h1>
 	</div>
 	<div class="row">
 		<div class="column">
 			<model-viewer class="model" src="Models_Android/Bizzcom_Palette.glb" ios-src="Models_iOS/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
-	</div>
+	</div-->
 </body>
 </html>
