--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 	<script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
 
 	<!-- Import the component -->
-	<script type="module" src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer.min.js"></script>
-	<script nomodule src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer-legacy.js"></script>
+	<!--script type="module" src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer.min.js"></script-->
+	<!--script nomodule src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer-legacy.js"></script-->
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 	<style>
 		* {
