--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
 <body>
 
 	<div class="row">
-		<h1>Pantograf</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="Models_Android/Elektro_Pantograf.glb" ios-src="Models_iOS/Elektro_Pantograf.usdz" alt="Pantograf" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
+		<h1 href="/pages/elektro-pantograf">Pantograf</h1>
 	</div>
 
 	<div class="row">
@@ -61,7 +56,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotor_Explode.glb" ios-src="Models_iOS/eMotor_Explode.usdz" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="models-android/eMotor_Explode.glb" ios-src="models-ios/eMotor_Explode.usdz" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -70,7 +65,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/eMotor_Inside.glb" ios-src="Models_iOS/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="models-android/eMotor_Inside.glb" ios-src="models-ios/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -79,7 +74,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Forklift.glb" ios-src="Models_iOS/Forklift.usdz" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="models-android/Forklift.glb" ios-src="models-ios/Forklift.usdz" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -88,7 +83,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Industrial_Lift.glb" ios-src="Models_iOS/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="models-android/Industrial_Lift.glb" ios-src="models-ios/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div>
 
@@ -97,7 +92,7 @@
 	</div>
 	<div class="row">
 		<div class="column">
-			<model-viewer class="model" src="Models_Android/Bizzcom_Palette.glb" ios-src="Models_iOS/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+			<model-viewer class="model" src="models-android/Bizzcom_Palette.glb" ios-src="models-ios/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
 		</div>
 	</div-->
 </body>
