--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
 <body>
 
 	<div class="row">
-		<h1 href="/pages/elektro-pantograf">Pantograf</h1>
+		<a href="/pages/elektro-pantograf">
+			<img src="../thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
+		</a>
 	</div>
 
 	<div class="row">
