--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<div class="row">
 		<a href="/pages/elektro-pantograf">
-			<img src="../thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
+			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
 	</div>
 
