--- a/pages/emotor-inside.html
+++ b/pages/emotor-inside.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<!-- Import the component -->
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+	
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<model-viewer class="model" src="../models-android/eMotor_Inside.glb" ios-src="../models-ios/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
+</body>
+</html>
