--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -1,1 +1,12 @@
 <!DOCTYPE html>
+<html>
+<head>
+	<!-- Import the component -->
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+	
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<model-viewer class="model" src="../models-android/Industrial_Lift.glb" ios-src="../models-ios/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
+</body>
+</html>
