--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- The following libraries and polyfills are recommended to maximize browser support -->
-
-	<!-- 🚨 REQUIRED: Web Components polyfill to support Edge and Firefox < 63 -->
-	<!--script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script-->
-
-	<!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
-	<!--script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script-->
-
-	<!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
-	<!--script src="https://unpkg.com/resize-observer-polyfill@1.5.0/dist/ResizeObserver.js"></script-->
-
-	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-	<!--script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script-->
-
 	<!-- Import the component -->
-	<!--script type="module" src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer.min.js"></script-->
-	<!--script nomodule src="https://unpkg.com/@google/model-viewer@1.2.1/dist/model-viewer-legacy.js"></script-->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 	<style>
@@ -37,11 +21,6 @@
 		  display: table;
 		  clear: both;
 		}
-
-		.model {
-		  height: 500px;
-		  width: 500px;
-		}
 	</style>
 <title>Models</title>
 </head>
@@ -54,48 +33,31 @@
 	</div>
 
 	<div class="row">
-		<h1>Motor Explode</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="models-android/eMotor_Explode.glb" ios-src="models-ios/eMotor_Explode.usdz" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
+		<a href="/pages/emotor-explode">
+			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
+		</a>
 	</div>
 
 	<div class="row">
-		<h1>Motor Inside</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="models-android/eMotor_Inside.glb" ios-src="models-ios/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
+		<a href="/pages/emotor-inside">
+			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
+		</a>
 	</div>
 
 	<div class="row">
-		<h1>Forklift</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="models-android/Forklift.glb" ios-src="models-ios/Forklift.usdz" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
+		<a href="/pages/forklift">
+			<img src="thumbnails/Forklift.jpg" alt="Forklift">
+		</a>
 	</div>
 
 	<div class="row">
-		<h1>Industrial Lift</h1>
-	</div>
-	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="models-android/Industrial_Lift.glb" ios-src="models-ios/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
+		<a href="/pages/industrial-lift">
+			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
+		</a>
 	</div>
 
-	<!--div class="row">
-		<h1>Bizzcom Palette</h1>
-	</div>
 	<div class="row">
-		<div class="column">
-			<model-viewer class="model" src="models-android/Bizzcom_Palette.glb" ios-src="models-ios/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
-		</div>
-	</div-->
+		<a href="/pages/bizzcom-palette">Bizzcom Palette</a>
+	</div>
 </body>
 </html>
