--- a/index.html
+++ b/index.html
@@ -4,24 +4,7 @@
 	<!-- Import the component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
-	<style>
-		* {
-		  box-sizing: border-box;
-		}
-
-		.column {
-		  float: left;
-		  padding: 10px;
-		  height: 500px;
-		  width: 500px;
-		}
-
-		.row:after {
-		  content: "";
-		  display: table;
-		  clear: both;
-		}
-	</style>
+	<link rel="stylesheet" href="style.css">
 <title>Models</title>
 </head>
 <body>
