--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/eMotor_Explode.glb" ios-src="../models-ios/eMotor_Explode.usdz" alt="Motor Explode" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/eMotor_Explode.glb"
+		      ios-src="../models-ios/eMotor_Explode.usdz"
+		      alt="Motor Explode"
+		      ar
+		      ar-modes="scene-viewer webxr quick-look"
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
