--- a/pages/bizzcom-palette.html
+++ b/pages/bizzcom-palette.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/Bizzcom_Palette.glb" ios-src="../models-ios/Bizzcom_Palette.usdz" alt="Bizzcom Palette" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/Bizzcom_Palette.glb"
+		      ios-src="../models-ios/Bizzcom_Palette.usdz"
+		      alt="Bizzcom Palette"
+		      ar
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
