--- a/pages/elektro-pantograf.html
+++ b/pages/elektro-pantograf.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/Elektro_Pantograf.glb" ios-src="../models-ios/Elektro_Pantograf.usdz" alt="Pantograf" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/Elektro_Pantograf.glb"
+		      ios-src="../models-ios/Elektro_Pantograf.usdz"
+		      alt="Pantograf"
+		      ar
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
