--- a/pages/emotor-inside.html
+++ b/pages/emotor-inside.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/eMotor_Inside.glb" ios-src="../models-ios/eMotor_Inside.usdz" alt="Motor Inside" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/eMotor_Inside.glb"
+		      ios-src="../models-ios/eMotor_Inside.usdz"
+		      alt="Motor Inside"
+		      ar
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
