--- a/pages/forklift.html
+++ b/pages/forklift.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/Forklift.glb" ios-src="../models-ios/Forklift.usdz" alt="Forklift" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/Forklift.glb"
+		      ios-src="../models-ios/Forklift.usdz"
+		      alt="Forklift"
+		      ar
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
