--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -7,6 +7,13 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model" src="../models-android/Industrial_Lift.glb" ios-src="../models-ios/Industrial_Lift.usdz" alt="Industrial Lift" ar autoplay auto-rotate camera-controls></model-viewer>
+	<model-viewer class="model"
+		      src="../models-android/Industrial_Lift.glb"
+		      ios-src="../models-ios/Industrial_Lift.usdz"
+		      alt="Industrial Lift"
+		      ar
+		      autoplay
+		      auto-rotate
+		      camera-controls></model-viewer>
 </body>
 </html>
