--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -10,10 +10,13 @@
 	<model-viewer class="model"
 		      src="../models-android/eMotor_Explode.glb"
 		      ios-src="../models-ios/eMotor_Explode.usdz"
+		      poster="../thumbnails/Elektro_Pantograf.jpg"
+		      loading="eager"
 		      alt="Motor Explode"
 		      ar
 		      autoplay
 		      auto-rotate
-		      camera-controls></model-viewer>
+		      camera-controls>
+	</model-viewer>
 </body>
 </html>
