--- a/pages/elektro-pantograf.html
+++ b/pages/elektro-pantograf.html
@@ -10,6 +10,8 @@
 	<model-viewer class="model"
 		      src="../models-android/Elektro_Pantograf.glb"
 		      ios-src="../models-ios/Elektro_Pantograf.usdz"
+		      poster="../thumbnails/Elektro_Pantograf.jpg"
+		      loading="eager"
 		      alt="Pantograf"
 		      ar
 		      autoplay
