--- a/pages/emotor-inside.html
+++ b/pages/emotor-inside.html
@@ -10,6 +10,8 @@
 	<model-viewer class="model"
 		      src="../models-android/eMotor_Inside.glb"
 		      ios-src="../models-ios/eMotor_Inside.usdz"
+		      poster="../thumbnails/eMotor_Inside.jpg"
+		      loading="eager"
 		      alt="Motor Inside"
 		      ar
 		      autoplay
