--- a/pages/forklift.html
+++ b/pages/forklift.html
@@ -10,6 +10,8 @@
 	<model-viewer class="model"
 		      src="../models-android/Forklift.glb"
 		      ios-src="../models-ios/Forklift.usdz"
+		      poster="../thumbnails/Forklift.jpg"
+		      loading="eager"
 		      alt="Forklift"
 		      ar
 		      autoplay
