--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -10,6 +10,8 @@
 	<model-viewer class="model"
 		      src="../models-android/Industrial_Lift.glb"
 		      ios-src="../models-ios/Industrial_Lift.usdz"
+		      poster="../thumbnails/Industrial_Lift.jpg"
+		      loading="eager"
 		      alt="Industrial Lift"
 		      ar
 		      autoplay
