--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<model-viewer class="model"
+		      id="reveal"
 		      src="../models-android/eMotor_Explode.glb"
 		      ios-src="../models-ios/eMotor_Explode.usdz"
 		      poster="../thumbnails/eMotor_Explode.jpg"
