--- a/pages/elektro-pantograf.html
+++ b/pages/elektro-pantograf.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<model-viewer class="model"
+		      id="reveal"
 		      src="../models-android/Elektro_Pantograf.glb"
 		      ios-src="../models-ios/Elektro_Pantograf.usdz"
 		      poster="../thumbnails/Elektro_Pantograf.jpg"
