--- a/pages/emotor-inside.html
+++ b/pages/emotor-inside.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<model-viewer class="model"
+		      id="reveal"
 		      src="../models-android/eMotor_Inside.glb"
 		      ios-src="../models-ios/eMotor_Inside.usdz"
 		      poster="../thumbnails/eMotor_Inside.jpg"
