--- a/pages/forklift.html
+++ b/pages/forklift.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<model-viewer class="model"
+		      id="reveal"
 		      src="../models-android/Forklift.glb"
 		      ios-src="../models-ios/Forklift.usdz"
 		      poster="../thumbnails/Forklift.jpg"
