--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<model-viewer class="model"
+		      id="reveal"
 		      src="../models-android/Industrial_Lift.glb"
 		      ios-src="../models-ios/Industrial_Lift.usdz"
 		      poster="../thumbnails/Industrial_Lift.jpg"
