--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -18,6 +18,8 @@
 		      autoplay
 		      auto-rotate
 		      camera-controls>
+		<button slot="ar-button" id="ar-button">
+		</button>
 	</model-viewer>
 </body>
 </html>
