--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -17,7 +17,6 @@
 		      ar
 		      autoplay
 		      auto-rotate
-		      camera-controls>
-	</model-viewer>
+		      camera-controls></model-viewer>
 </body>
 </html>
