--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model"
-		      id="reveal"
-		      src="../models-android/eMotor_Explode.glb"
+	<model-viewer src="../models-android/eMotor_Explode.glb"
 		      ios-src="../models-ios/eMotor_Explode.usdz"
 		      poster="../thumbnails/eMotor_Explode.jpg"
 		      loading="eager"
