--- a/pages/elektro-pantograf.html
+++ b/pages/elektro-pantograf.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model"
-		      id="reveal"
-		      src="../models-android/Elektro_Pantograf.glb"
+	<model-viewer src="../models-android/Elektro_Pantograf.glb"
 		      ios-src="../models-ios/Elektro_Pantograf.usdz"
 		      poster="../thumbnails/Elektro_Pantograf.jpg"
 		      loading="eager"
