--- a/pages/forklift.html
+++ b/pages/forklift.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model"
-		      id="reveal"
-		      src="../models-android/Forklift.glb"
+	<model-viewer src="../models-android/Forklift.glb"
 		      ios-src="../models-ios/Forklift.usdz"
 		      poster="../thumbnails/Forklift.jpg"
 		      loading="eager"
