--- a/pages/industrial-lift.html
+++ b/pages/industrial-lift.html
@@ -7,9 +7,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<model-viewer class="model"
-		      id="reveal"
-		      src="../models-android/Industrial_Lift.glb"
+	<model-viewer src="../models-android/Industrial_Lift.glb"
 		      ios-src="../models-ios/Industrial_Lift.usdz"
 		      poster="../thumbnails/Industrial_Lift.jpg"
 		      loading="eager"
