--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -5,6 +5,8 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
+	
+	<script src="ios-redirect.js"></script>
 </head>
 <body>
 	<model-viewer src="../models-android/eMotor_Explode.glb"
