--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
+	<script src="https://unpkg.com/focus-visible@5.0.2/dist/focus-visible.js" defer></script>
+	
 	<!-- Import the component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
@@ -10,7 +13,7 @@
         (() => {
 		//var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 		//if (isIOS) {
-			window.location.href = "../models-ios/eMotor_Explode.usdz";
+		//	window.location.href = "../models-ios/eMotor_Explode.usdz";
 		//}
         })();
     </script>
