--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<!-- 🚨 REQUIRED: Web Components polyfill to support Edge and Firefox < 63 -->
-	<script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+	<!--script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script-->
 
 	<!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
-	<script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script>
+	<!--script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script-->
 
 	<!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
-	<script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script>
+	<!--script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script-->
 
 	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-	<script src="https://unpkg.com/focus-visible/dist/focus-visible.min.js" defer></script>
+	<!--script src="https://unpkg.com/focus-visible/dist/focus-visible.min.js" defer></script-->
 
 	<!-- The model-viewer component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
@@ -25,7 +25,7 @@
 		//	window.location.href = "../models-ios/eMotor_Explode.usdz";
 		//}
         //})();
-	(() => {
+	/*(() => {
 		var checkExist = setInterval(function() {
 			modelViewer = document.querySelector("model-viewer");
 			if (modelViewer != null) {
@@ -33,7 +33,7 @@
 				clearInterval(checkExist);
 			}
 		}, 100);
-	})();
+	})();*/
     </script>
 </head>
 <body>
