--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- 🚨 REQUIRED: Web Components polyfill to support Edge and Firefox < 63 -->
-	<!--script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script-->
+	<script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
 	<!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
 	<!--script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script-->
