--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -5,13 +5,13 @@
 	<script src="https://unpkg.com/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
 
 	<!-- 💁 OPTIONAL: Intersection Observer polyfill for better performance in Safari and IE11 -->
-	<!--script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script-->
+	<script src="https://unpkg.com/intersection-observer/intersection-observer.js"></script>
 
 	<!-- 💁 OPTIONAL: Resize Observer polyfill improves resize behavior in non-Chrome browsers -->
-	<!--script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script-->
+	<script src="https://unpkg.com/resize-observer-polyfill/dist/ResizeObserver.js"></script>
 
 	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
-	<!--script src="https://unpkg.com/focus-visible/dist/focus-visible.min.js" defer></script-->
+	<script src="https://unpkg.com/focus-visible/dist/focus-visible.min.js" defer></script>
 
 	<!-- The model-viewer component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
