--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -43,6 +43,7 @@
 		      loading="eager"
 		      alt="Motor Explode"
 		      ar
+		      ar-modes="scene-viewer webxr quick-look"
 		      autoplay
 		      auto-rotate
 		      camera-controls></model-viewer>
