--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -18,7 +18,10 @@
 	
 	<link rel="stylesheet" href="style.css">
 	
-	<script>
+	<!-- 💁 OPTIONAL: On iOS opens the iOS AR Quick Look App immediatelly -->
+	<script src="ios-redirect.js"></script>
+	
+	<!--script>
 	(() => {
 		var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 		if (isIOS) {
@@ -31,7 +34,7 @@
 			}, 500);
 		}
 	})();
-    </script>
+    </script-->
 </head>
 <body>
 	<model-viewer src="../models-android/eMotor_Explode.glb"
