--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -18,7 +18,7 @@
 	
 	<link rel="stylesheet" href="style.css">
 	
-	<!-- 💁 OPTIONAL: On iOS opens the iOS AR Quick Look App immediatelly -->
+	<!-- 💁 OPTIONAL: On iOS, opens the iOS AR Quick Look App immediatelly -->
 	<script src="ios-redirect.js"></script>
 	
 	<!--script>
