--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -17,11 +17,11 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<!-- 💁 OPTIONAL: On iOS, opens the iOS AR Quick Look App immediatelly -->
-	<script src="ios-redirect.js"></script>
+	<!--script src="ios-redirect.js"></script-->
 	
 	<link rel="stylesheet" href="style.css">
 	
-	<!--script>
+	<script>
 	(() => {
 		var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 		if (isIOS) {
@@ -34,7 +34,7 @@
 			}, 500);
 		}
 	})();
-    </script-->
+    </script>
 </head>
 <body>
 	<model-viewer src="../models-android/eMotor_Explode.glb"
