--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -23,8 +23,8 @@
 	
 	<script>
 	(() => {
-		var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
-		if (isIOS) {
+		//var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+		//if (isIOS) {
 			var checkExist = setInterval(function() {
 				modelViewer = document.querySelector("model-viewer");
 				if (modelViewer != null) {
@@ -32,7 +32,7 @@
 					clearInterval(checkExist);
 				}
 			}, 500);
-		}
+		//}
 	})();
     </script>
 </head>
