--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -22,9 +22,20 @@
 	<link rel="stylesheet" href="style.css">
 	
 	<script>
-	//(() => {
-	//	var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
-	//	if (isIOS) {
+		function isIOS() {
+			return [
+				'iPad Simulator',
+				'iPhone Simulator',
+				'iPod Simulator',
+				'iPad',
+				'iPhone',
+				'iPod'
+			].includes(navigator.platform)
+			// iPad on iOS 13 detection
+			|| (navigator.userAgent.includes("Mac") && "ontouchend" in document)
+		}
+		
+		if (isIOS) {
 			var checkExist = setInterval(function() {
 				modelViewer = document.querySelector("model-viewer");
 				if (modelViewer != null) {
@@ -32,8 +43,7 @@
 					clearInterval(checkExist);
 				}
 			}, 2000);
-	//	}
-	//})();
+		}
     </script>
 </head>
 <body>
