--- a/pages/bizzcom-palette.html
+++ b/pages/bizzcom-palette.html
@@ -16,6 +16,9 @@
 	<!-- The model-viewer component -->
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
+	<!-- 💁 OPTIONAL: On iOS, opens the iOS AR Quick Look App immediatelly -->
+	<script src="ios-redirect.js"></script>
+	
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
