--- a/pages/emotor-explode.html
+++ b/pages/emotor-explode.html
@@ -12,12 +12,12 @@
 
 	<!-- 💁 OPTIONAL: The :focus-visible polyfill removes the focus ring for some input types -->
 	<script src="https://unpkg.com/focus-visible/dist/focus-visible.min.js" defer></script>
-
-	<!-- The model-viewer component -->
-	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<!-- 💁 OPTIONAL: On iOS, opens the iOS AR Quick Look App immediatelly -->
 	<script src="ios-redirect.js"></script>
+
+	<!-- 🚨 REQUIRED: The model-viewer component -->
+	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
 </head>
