--- a/index.html
+++ b/index.html
@@ -12,35 +12,42 @@
 	<div class="row">
 		<a href="/pages/elektro-pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
+			<img src="qrcodes/Elektro_Pantograf.png" alt="Pantograf">
 		</a>
 	</div>
 
 	<div class="row">
 		<a href="/pages/emotor-explode">
 			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
+			<img src="qrcodes/eMotor_Explode.png" alt="Motor Explode">
 		</a>
 	</div>
 
 	<div class="row">
 		<a href="/pages/emotor-inside">
 			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
+			<img src="qrcodes/eMotor_Inside.png" alt="Motor Inside">
 		</a>
 	</div>
 
 	<div class="row">
 		<a href="/pages/forklift">
 			<img src="thumbnails/Forklift.jpg" alt="Forklift">
+			<img src="qrcodes/Forklift.png" alt="Forklift">
 		</a>
 	</div>
 
 	<div class="row">
 		<a href="/pages/industrial-lift">
 			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
+			<img src="qrcodes/Industrial_Lift.png" alt="Industrial Lift">
 		</a>
 	</div>
 
 	<div class="row">
-		<a href="/pages/bizzcom-palette">Bizzcom Palette</a>
+		<a href="/pages/bizzcom-palette">
+			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
+		</a>
 	</div>
 </body>
 </html>
