--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<div class="row">
 		<a href="/pages/elektro-pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
+		</a>
+		<a href="/pages/elektro-pantograf">
 			<img src="qrcodes/Elektro_Pantograf.png" alt="Pantograf">
 		</a>
 	</div>
