--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<div class="row">
 		<a href="/pages/emotor-explode">
 			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
+		</a>
+		<a href="/pages/emotor-explode">
 			<img src="qrcodes/eMotor_Explode.png" alt="Motor Explode">
 		</a>
 	</div>
@@ -25,6 +27,8 @@
 	<div class="row">
 		<a href="/pages/emotor-inside">
 			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
+		</a>
+		<a href="/pages/emotor-inside">
 			<img src="qrcodes/eMotor_Inside.png" alt="Motor Inside">
 		</a>
 	</div>
@@ -32,6 +36,8 @@
 	<div class="row">
 		<a href="/pages/forklift">
 			<img src="thumbnails/Forklift.jpg" alt="Forklift">
+		</a>
+		<a href="/pages/forklift">
 			<img src="qrcodes/Forklift.png" alt="Forklift">
 		</a>
 	</div>
@@ -39,6 +45,8 @@
 	<div class="row">
 		<a href="/pages/industrial-lift">
 			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
+		</a>
+		<a href="/pages/industrial-lift">
 			<img src="qrcodes/Industrial_Lift.png" alt="Industrial Lift">
 		</a>
 	</div>
