--- a/pages/bizzcom-palette.html
+++ b/pages/bizzcom-palette.html
@@ -20,6 +20,8 @@
 	<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 	
 	<link rel="stylesheet" href="style.css">
+	
+	<title>Bizzcom Palette</title>
 </head>
 <body>
 	<model-viewer class="model"
