--- a/model.html
+++ b/model.html
@@ -24,10 +24,7 @@
 	<title>Bizzcom Palette</title>
 </head>
 <body>
-	<model-viewer class="model"
-		      src="../models-android/Bizzcom_Palette.glb"
-		      ios-src="../models-ios/Bizzcom_Palette.usdz"
-		      alt="Bizzcom Palette"
+	<model-viewer loading="eager"
 		      ar
 		      autoplay
 		      auto-rotate
