--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>Models</h1>
 	
 	<div class="row">
-		<a href="model?model=Elektro_Pantograf">
+		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
 		<a href="/pages/elektro-pantograf">
