--- a/model.html
+++ b/model.html
@@ -22,7 +22,7 @@
 	<!-- Assigns Model and Friendly Name based on URL parameters -->
 	<script src="assign-model.js"></script>
 	
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="model.css">
 </head>
 <body>
 	<model-viewer loading="eager"
