--- a/model.html
+++ b/model.html
@@ -25,7 +25,9 @@
 	<link rel="stylesheet" href="model.css">
 </head>
 <body>
-	<model-viewer loading="eager"
+	<model-viewer src="../models-android/Elektro_Pantograf.glb"
+		      ios-src="../models-ios/Elektro_Pantograf.usdz"
+		      loading="eager"
 		      ar
 		      autoplay
 		      auto-rotate
