--- a/model.html
+++ b/model.html
@@ -25,9 +25,7 @@
 	<link rel="stylesheet" href="model.css">
 </head>
 <body>
-	<model-viewer src="models-android/eMotor_Explode.glb"
-		      ios-src="models-ios/eMotor_Explode.usdz"
-		      loading="eager"
+	<model-viewer loading="eager"
 		      ar
 		      autoplay
 		      auto-rotate
