--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</a>
 	</div>
 
-	<div class="row">
+	<div>
 		<a href="model?filename=eMotor_Explode&friendly-name=Motor Explode">
 			<img src="thumbnails/eMotor_Explode.jpg" alt="Motor Explode">
 		</a>
@@ -26,7 +26,7 @@
 		</a>
 	</div>
 
-	<div class="row">
+	<div>
 		<a href="model?filename=eMotor_Inside&friendly-name=Motor Inside">
 			<img src="thumbnails/eMotor_Inside.jpg" alt="Motor Inside">
 		</a>
@@ -35,7 +35,7 @@
 		</a>
 	</div>
 
-	<div class="row">
+	<div>
 		<a href="model?filename=Forklift&friendly-name=Forklift">
 			<img src="thumbnails/Forklift.jpg" alt="Forklift">
 		</a>
@@ -44,7 +44,7 @@
 		</a>
 	</div>
 
-	<div class="row">
+	<div>
 		<a href="model?filename=Industrial_Lift&friendly-name=Industrial Lift">
 			<img src="thumbnails/Industrial_Lift.jpg" alt="Industrial Lift">
 		</a>
@@ -53,7 +53,7 @@
 		</a>
 	</div>
 
-	<div class="row">
+	<div>
 		<a href="model?filename=Bizzcom_Palette&friendly-name=Bizzcom Palette">
 			<img src="qrcodes/Bizzcom_Palette.png" alt="Bizzcom Palette">
 		</a>
