--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 	<h1>Models</h1>
 	
 	<div>
-		<a href="model?
+		<!--a href="model?
 			 title=Pantograf&
 			 src=../models-android/Elektro_Pantograf.glb&
 			 ios-src=../models-ios/Elektro_Pantograf.usdz&
 			 poster=../thumbnails/Elektro_Pantograf.jpg&
 			 alt=Pantograf">
+			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
+		</a-->
+		<a href="model?
+			 title=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
 		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
