--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 			 alt=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a-->
-		<a href="model?
-			 title=Pantograf">
+		<a href="model?title=Pantograf">
 			<img src="thumbnails/Elektro_Pantograf.jpg" alt="Pantograf">
 		</a>
 		<a href="model?filename=Elektro_Pantograf&friendly-name=Pantograf">
